new value for testParam

--- a/cdn-vfs-agent-default.properties
+++ b/cdn-vfs-agent-default.properties
@@ -1,2 +1,2 @@
 # Core configuration file for a VFS Agent in the CDN
-testParam=test parameter value
+testParam=test parameter value from the quick test configuration repository
